welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:-5: error: Unmatched closing brace '}' ignored here
	}
        ^Balin:-4: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Balin:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^